# odineye

./: README.md  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lcu.rs  lib.rs  main.rs
src/api/: index.js
src/components/: BottomBar.vue  TypeList.vue  leftMenu.vue
src/router/: index.js
src/store/: index.js  lcu.js
src/utils/: index.js
src/views/: GameStart.vue  Gameing.vue  Home.vue  Record.vue  board.vue  esports.vue  lolMain.vue  more.vue  rank.vue  search.vue
