[package]
name = "odineye"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "odineye_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
regex = "1.5"
base64 = "0.21"
tauri-plugin-shell = "2"
xcap = "0.4.1"
fs_extra = "1.3"
scrap = "0.5.0"
image = "0.24.4"
tauri-plugin-http = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.0.0"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
irelia = "0.9"
# 添加 raw-window-handle 获取 HWND
raw-window-handle = "0.5"
wmi = "0.13"
serde = { version = "1.0", features = ["derive"] }
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console"
] }
regex = "1"

